--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,16 +1,9 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <button
-      class="hero"
-      [class.hero_selected]="hero === selectedHero"
-      type="button"
-      (click)="onSelect(hero)"
-    >
+    <a routerLink="/detail/{{ hero.id }}" class="hero">
       <span class="hero__badge">{{ hero.id }}</span>
       <span class="hero__name">{{ hero.name }}</span>
-    </button>
+    </a>
   </li>
 </ul>
-
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
