--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,31 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <a routerLink="/detail/{{ hero.id }}" class="hero">
+    <a class="hero" routerLink="/detail/{{ hero.id }}">
       <span class="hero__badge">{{ hero.id }}</span>
       <span class="hero__name">{{ hero.name }}</span>
     </a>
+    <button
+      type="button"
+      class="delete"
+      title="delete hero"
+      (click)="deleteHero(hero)"
+    >
+      x
+    </button>
   </li>
 </ul>
+
+<div>
+  <label for="new-hero">Hero name: </label>
+  <input id="new-hero" #heroName />
+
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button
+    type="button"
+    class="add-button"
+    (click)="addHero(heroName.value); heroName.value = ''"
+  >
+    Add hero
+  </button>
+</div>
